--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Red30 Tech Conf",
-  "name": "Red30 Tech Conference",
+  "short_name": "Republic Polytechnic",
+  "name": "RP SOI courses",
   "icons": [
     {
       "src": "favicon.ico",
